--- a/DemoProject/test-output/index.html
+++ b/DemoProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\robir\AppData\Local\Temp\testng-eclipse--419747000\testng-customsuite.xml</span>
+                    <span>C:\Users\robir\AppData\Local\Temp\testng-eclipse-1402261729\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(osCommerce Signup features testing)">feature(osCommerce Signup features testing)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(OS commerce login features testing)">feature(OS commerce login features testing)</a> <!-- method navigator-link -->
@@ -125,6 +130,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="feature(osCommerce Signup features testing)">
+                  </a> <!-- feature(osCommerce Signup features testing) -->
+                  <span class="method-name">feature</span>
+                  <span class="parameters">(osCommerce Signup features testing)</span>
+                  <em>
+(Runs Cucumber Feature)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="feature(OS commerce login features testing)">
                   </a> <!-- feature(OS commerce login features testing) -->
                   <span class="method-name">feature</span>
@@ -138,7 +153,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\robir\AppData\Local\Temp\testng-eclipse--419747000\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\robir\AppData\Local\Temp\testng-eclipse-1402261729\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,9 +162,6 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.d.common.Simple&quot;/&gt;
-      &lt;class name=&quot;com.d.mystepdef.Mystepdef&quot;/&gt;
-      &lt;class name=&quot;com.d.elements.DElements&quot;/&gt;
       &lt;class name=&quot;com.d.testrunner.Testrunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
@@ -164,7 +176,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (4 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -198,16 +210,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'com.d.testrunner.Testrunner')
-data.setCell(0, 3, 7819);
+data.setCell(0, 3, 26093);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'feature')
+data.setCell(1, 2, 'com.d.testrunner.Testrunner')
+data.setCell(1, 3, 7257);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -240,11 +256,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">feature(OS commerce login features testing)</span>
-                <span class="method-start">187 ms</span>
+                <span class="method-start">219 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">feature(osCommerce Signup features testing)</span>
+                <span class="method-start">7477 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">8008 ms</span>
+                <span class="method-start">33572 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
