--- a/DemoProject/test-output/index.html
+++ b/DemoProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\robir\AppData\Local\Temp\testng-eclipse-1402261729\testng-customsuite.xml</span>
+                    <span>C:\Users\robir\AppData\Local\Temp\testng-eclipse-938152907\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(osCommerce Signup features testing)">feature(osCommerce Signup features testing)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(Add to cart button Functionality testing)">feature(Add to cart button Functionality testing)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(OS commerce login features testing)">feature(OS commerce login features testing)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.d.testrunner.Testrunner" hash-for-method="feature(osCommerce Signup features testing)">feature(osCommerce Signup features testing)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,10 +135,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="feature(osCommerce Signup features testing)">
-                  </a> <!-- feature(osCommerce Signup features testing) -->
+                  <a name="feature(Add to cart button Functionality testing)">
+                  </a> <!-- feature(Add to cart button Functionality testing) -->
                   <span class="method-name">feature</span>
-                  <span class="parameters">(osCommerce Signup features testing)</span>
+                  <span class="parameters">(Add to cart button Functionality testing)</span>
                   <em>
 (Runs Cucumber Feature)                  </em>
                 </div> <!-- method-content -->
@@ -148,12 +153,22 @@
 (Runs Cucumber Feature)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="feature(osCommerce Signup features testing)">
+                  </a> <!-- feature(osCommerce Signup features testing) -->
+                  <span class="method-name">feature</span>
+                  <span class="parameters">(osCommerce Signup features testing)</span>
+                  <em>
+(Runs Cucumber Feature)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\robir\AppData\Local\Temp\testng-eclipse-1402261729\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\robir\AppData\Local\Temp\testng-eclipse-938152907\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,20 +225,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'feature')
 data.setCell(0, 2, 'com.d.testrunner.Testrunner')
-data.setCell(0, 3, 26093);
+data.setCell(0, 3, 31275);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'feature')
 data.setCell(1, 2, 'com.d.testrunner.Testrunner')
-data.setCell(1, 3, 7257);
+data.setCell(1, 3, 30451);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'feature')
+data.setCell(2, 2, 'com.d.testrunner.Testrunner')
+data.setCell(2, 3, 18582);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -255,16 +274,20 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">feature(Add to cart button Functionality testing)</span>
+                <span class="method-start">231 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">feature(OS commerce login features testing)</span>
-                <span class="method-start">219 ms</span>
+                <span class="method-start">31507 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">feature(osCommerce Signup features testing)</span>
-                <span class="method-start">7477 ms</span>
+                <span class="method-start">50090 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">33572 ms</span>
+                <span class="method-start">80542 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
